[gd_scene load_steps=113 format=2]

[ext_resource path="res://images/placeholders/white.png" type="Texture" id=1]
[ext_resource path="res://fonts/BebasNeue Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/characters/Player.gd" type="Script" id=3]
[ext_resource path="res://src/environment/ScreenShakeGenerator.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/characters/player frames/spr_ArcherJumpAndFall_strip_NoBkg - NO SHADOW.png" type="Texture" id=5]
[ext_resource path="res://images/ui/heart pixel art 64x64.png" type="Texture" id=6]
[ext_resource path="res://src/helpers/StateLabel.gd" type="Script" id=7]
[ext_resource path="res://images/characters/player frames/spr_ArcherDash_strip_NoBkg.png" type="Texture" id=8]
[ext_resource path="res://images/characters/player frames/spr_ArcherDeath_strip_NoBkg.png" type="Texture" id=9]
[ext_resource path="res://src/damage_boxes/Hitbox.tscn" type="PackedScene" id=10]
[ext_resource path="res://sounds/hurt/Player hurt scream v1-001.wav" type="AudioStream" id=11]
[ext_resource path="res://src/behavior/HurtAnimationPlayer.tscn" type="PackedScene" id=12]
[ext_resource path="res://images/characters/player frames/spr_ArcherIdle_strip_NoBkg.png" type="Texture" id=13]
[ext_resource path="res://images/characters/player frames/spr_ArcherMelee_strip_NoBkg.png" type="Texture" id=14]
[ext_resource path="res://images/characters/player frames/spr_ArcherRun_strip_NoBkg.png" type="Texture" id=15]
[ext_resource path="res://src/helpers/HealthUI.gd" type="Script" id=16]
[ext_resource path="res://sounds/footsteps/player footsteps v1-001.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/footsteps/player footsteps v1-004.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/hurt/Player hurt scream v1-002.wav" type="AudioStream" id=19]
[ext_resource path="res://sounds/footsteps/player footsteps v1-002.wav" type="AudioStream" id=20]
[ext_resource path="res://sounds/footsteps/player footsteps v1-003.wav" type="AudioStream" id=21]
[ext_resource path="res://sounds/hurt/SFX_3 DEATH.ogg" type="AudioStream" id=23]
[ext_resource path="res://sounds/music/JDB_Hunters.ogg" type="AudioStream" id=24]
[ext_resource path="res://sounds/sfx/Attack_Sound.wav" type="AudioStream" id=25]
[ext_resource path="res://sounds/sfx/Hurt_Sound.wav" type="AudioStream" id=26]
[ext_resource path="res://src/menus/YouDiedText.tscn" type="PackedScene" id=27]
[ext_resource path="res://images/placeholders/white circle.png" type="Texture" id=28]
[ext_resource path="res://sounds/sfx/Error.wav" type="AudioStream" id=29]
[ext_resource path="res://images/characters/player frames/spr_ArcherAttack_strip_NoBkg.png" type="Texture" id=30]
[ext_resource path="res://src/shaders/Grayscale v1.shader" type="Shader" id=31]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.86539, 2.75651 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 14 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 14 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 14 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 14 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 14 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 14 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 14 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 14 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 14 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 15 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 15 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 15 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 15 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 15 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 15 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 13 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 13 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 13 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 9 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 9 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 9 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 9 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 9 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 9 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 9 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 2048, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 2176, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 2304, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 2432, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 2560, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 2688, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 2816, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 2944, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=73]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fall",
"speed": 1.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "attack_swing",
"speed": 15.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "jump",
"speed": 1.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "die",
"speed": 12.0
} ]

[sub_resource type="Animation" id=74]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_swing" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimatedSprite/Hitboxes/Hitbox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Audio/AttackAudio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=75]
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=76]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fall" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=77]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=78]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}

[sub_resource type="Animation" id=79]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_footsteps_audio"
}, {
"args": [  ],
"method": "play_footsteps_audio"
}, {
"args": [  ],
"method": "play_footsteps_audio"
}, {
"args": [  ],
"method": "play_footsteps_audio"
} ]
}

[sub_resource type="ShaderMaterial" id=80]
shader = ExtResource( 31 )

[sub_resource type="ShaderMaterial" id=81]
shader = ExtResource( 31 )

[sub_resource type="ShaderMaterial" id=82]
shader = ExtResource( 31 )

[node name="Player" type="KinematicBody2D" groups=[
"characters",
"human",
]]
material = SubResource( 1 )
z_as_relative = false
collision_mask = 2
script = ExtResource( 3 )
color = Color( 0.215686, 0.85098, 0.54902, 1 )
is_invulnerable = true

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -72.7393
margin_top = -53.2673
margin_right = 77.2607
margin_bottom = -21.2673
custom_fonts/font = SubResource( 2 )
text = "IDLE"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.026988, -2.92495 )
scale = Vector2( 1.44, 7.32 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.62009, -1.02668 )
scale = Vector2( 1.6, 1.6 )
frames = SubResource( 73 )
animation = "attack_swing"
frame = 4

[node name="Hitboxes" type="Node2D" parent="AnimatedSprite"]
position = Vector2( -2.88756, 0.641675 )
scale = Vector2( 0.625, 0.625 )

[node name="Hitbox" parent="AnimatedSprite/Hitboxes" instance=ExtResource( 10 )]
position = Vector2( 33.727, -12.7487 )
scale = Vector2( 0.682354, 0.368165 )

[node name="CenterPivot" type="Position2D" parent="."]
position = Vector2( 8.98529, -18.6408 )

[node name="ProjectileLaunchPosition1" type="Position2D" parent="CenterPivot"]
position = Vector2( 11.9995, 0 )

[node name="Aim" type="Position2D" parent="CenterPivot/ProjectileLaunchPosition1"]
position = Vector2( 10000, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 1000
current = true
zoom = Vector2( 0.9, 0.9 )
limit_left = 0
limit_top = -125
limit_bottom = 530

[node name="ScreenShakeGenerator" parent="Camera2D" instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_swing = SubResource( 74 )
anims/die = SubResource( 75 )
anims/fall = SubResource( 76 )
anims/idle = SubResource( 77 )
anims/jump = SubResource( 78 )
anims/walk = SubResource( 79 )

[node name="HurtAnimationPlayer" parent="AnimationPlayer" instance=ExtResource( 12 )]

[node name="Timers" type="Node" parent="."]

[node name="CoyoteGroundTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="BlankUI" type="HBoxContainer" parent="UI"]
margin_left = 11.5307
margin_top = 15.0168
margin_right = 971.531
margin_bottom = 555.017
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 15
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1Blank" type="TextureRect" parent="UI/BlankUI"]
material = SubResource( 80 )
margin_right = 64.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart2Blank" type="TextureRect" parent="UI/BlankUI"]
material = SubResource( 81 )
margin_left = 79.0
margin_right = 143.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart3Blank" type="TextureRect" parent="UI/BlankUI"]
material = SubResource( 82 )
margin_left = 158.0
margin_right = 222.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart1" type="TextureRect" parent="UI/BlankUI"]
visible = false
margin_left = 204.0
margin_right = 268.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart2" type="TextureRect" parent="UI/BlankUI"]
visible = false
margin_left = 204.0
margin_right = 268.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart3" type="TextureRect" parent="UI/BlankUI"]
visible = false
margin_left = 204.0
margin_right = 268.0
margin_bottom = 540.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/BlankUI"]

[node name="HealthUI" type="HBoxContainer" parent="UI"]
margin_left = 11.5307
margin_top = 15.0168
margin_right = 971.531
margin_bottom = 555.017
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 15
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1Blank" type="TextureRect" parent="UI/HealthUI"]
visible = false
material = SubResource( 80 )
margin_right = 64.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart2Blank" type="TextureRect" parent="UI/HealthUI"]
visible = false
material = SubResource( 81 )
margin_right = 64.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart3Blank" type="TextureRect" parent="UI/HealthUI"]
visible = false
material = SubResource( 82 )
margin_right = 64.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart1" type="TextureRect" parent="UI/HealthUI"]
margin_right = 64.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart2" type="TextureRect" parent="UI/HealthUI"]
margin_left = 79.0
margin_right = 143.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Heart3" type="TextureRect" parent="UI/HealthUI"]
margin_left = 158.0
margin_right = 222.0
margin_bottom = 540.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/HealthUI"]

[node name="HealthBar" type="TextureProgress" parent="UI"]
visible = false
margin_left = 11.7037
margin_top = 14.4378
margin_right = 43.7037
margin_bottom = 46.4378
rect_scale = Vector2( 5, 0.8 )
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.568627, 0.054902, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrappleCDBar" type="TextureProgress" parent="UI"]
margin_left = 140.094
margin_top = 9.77404
margin_right = 940.094
margin_bottom = 809.774
rect_scale = Vector2( 0.05, 0.05 )
value = 37.0
texture_under = ExtResource( 28 )
texture_progress = ExtResource( 28 )
fill_mode = 4
tint_under = Color( 0.235294, 0.235294, 0.235294, 0.627451 )
tint_progress = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/GrappleCDBar"]
modulate = Color( 1, 1, 1, 0.862745 )
position = Vector2( 347.226, 394.792 )
rotation = -0.625709
scale = Vector2( 25, 25 )
texture = ExtResource( 30 )
region_enabled = true
region_rect = Rect2( 2496, 48, 24, 8 )

[node name="Sprite2" type="Sprite" parent="UI/GrappleCDBar"]
modulate = Color( 1, 1, 1, 0.862745 )
position = Vector2( 642.131, 218.8 )
rotation = -0.625709
scale = Vector2( 25, 25 )
texture = ExtResource( 30 )
region_enabled = true
region_rect = Rect2( 1511, 49, 7, 8 )

[node name="YouDiedText" parent="UI" instance=ExtResource( 27 )]

[node name="Audio" type="Node2D" parent="."]

[node name="ThemeMusic" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 24 )
volume_db = -12.0
autoplay = true

[node name="HurtAudio1" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 11 )
pitch_scale = 0.9

[node name="HurtAudio2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 19 )
pitch_scale = 0.9

[node name="FootstepsAudio1" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 17 )

[node name="FootstepsAudio2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 20 )

[node name="FootstepsAudio3" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 21 )

[node name="FootstepsAudio4" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 18 )

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 23 )

[node name="HurtAudioSeparate" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 26 )
volume_db = -10.0

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 25 )
volume_db = -10.0
pitch_scale = 0.5

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 21 )
volume_db = 7.0
pitch_scale = 0.6

[node name="LandAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 20 )
volume_db = 7.0
pitch_scale = 0.5

[node name="ErrorAudio" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 29 )
volume_db = -10.0
pitch_scale = 0.7

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timers/CoyoteGroundTimer" to="." method="_on_CoyoteGroundTimer_timeout"]
[connection signal="timeout" from="Timers/InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]

[editable path="UI/YouDiedText"]
